--- a/REAlistGUIGenerator/pom.xml
+++ b/REAlistGUIGenerator/pom.xml
@@ -122,6 +122,19 @@
 	    <artifactId>commons-logging</artifactId>
 	    <version>1.1.3</version>
 	</dependency>
+	
+	<!-- SPRING -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>3.2.4.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>3.2.4.RELEASE</version>
+	</dependency>
+            
     
   </dependencies>
 
